--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-modele",
+  "name": "dinoto-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,17 +8,25 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives",
     "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@mui/system": "^5.15.6",
+    "@reduxjs/toolkit": "^2.0.1",
     "@vitejs/plugin-react": "^4.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-modal": "^3.16.1",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.21.3",
+    "redux": "^5.0.1",
     "vite": "^4.4.5"
   },
   "devDependencies": {
@@ -33,7 +41,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "gh-pages": "^6.1.1",
     "prettier": "^3.0.3",
     "sass": "^1.69.5"
   }
